--- a/MiniProjectWebServer/MiniProjectWebServer/View/Storyboard/Article Management/Main.storyboard
+++ b/MiniProjectWebServer/MiniProjectWebServer/View/Storyboard/Article Management/Main.storyboard
@@ -39,12 +39,36 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My name is HIEM SEYHA  " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j44-2B-tXD">
+                                <rect key="frame" x="6" y="163" width="364" height="77"/>
+                                <color key="backgroundColor" red="0.23018704354763031" green="0.77713233232498169" blue="0.3158949613571167" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="77" id="mSC-50-YH3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I am response two apps. Please swipe it to get into my app " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JLr-Nz-8Zl">
+                                <rect key="frame" x="6" y="248" width="364" height="121"/>
+                                <color key="backgroundColor" red="0.23018704349999999" green="0.77713233230000001" blue="0.31589496140000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.1911550909280777" green="0.6378670334815979" blue="0.26147949695587158" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="dV3-vR-WCs" firstAttribute="top" secondItem="mHr-rm-LDA" secondAttribute="bottom" constant="542" id="6aT-SB-QbP"/>
+                            <constraint firstItem="j44-2B-tXD" firstAttribute="centerX" secondItem="mHr-rm-LDA" secondAttribute="centerX" id="7Bi-K4-Ilc"/>
+                            <constraint firstItem="JLr-Nz-8Zl" firstAttribute="top" secondItem="j44-2B-tXD" secondAttribute="bottom" constant="8" symbolic="YES" id="7eQ-ev-17p"/>
+                            <constraint firstItem="dV3-vR-WCs" firstAttribute="top" secondItem="JLr-Nz-8Zl" secondAttribute="bottom" constant="298" id="LrK-4v-Sst"/>
                             <constraint firstItem="mHr-rm-LDA" firstAttribute="top" secondItem="sch-0o-K7S" secondAttribute="bottom" constant="65" id="TPV-IQ-ib3"/>
+                            <constraint firstItem="JLr-Nz-8Zl" firstAttribute="leading" secondItem="j44-2B-tXD" secondAttribute="leading" id="aJL-Ir-4sw"/>
+                            <constraint firstItem="JLr-Nz-8Zl" firstAttribute="trailing" secondItem="j44-2B-tXD" secondAttribute="trailing" id="bSd-v8-QDL"/>
                             <constraint firstItem="mHr-rm-LDA" firstAttribute="centerX" secondItem="s34-5I-Ojs" secondAttribute="centerX" id="dfA-aL-seF"/>
+                            <constraint firstItem="j44-2B-tXD" firstAttribute="top" secondItem="mHr-rm-LDA" secondAttribute="bottom" constant="38" id="i6l-Ee-8Pc"/>
+                            <constraint firstItem="j44-2B-tXD" firstAttribute="leading" secondItem="s34-5I-Ojs" secondAttribute="leadingMargin" constant="-10" id="wdV-HL-thP"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -65,7 +89,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="211"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5us-dJ-MUq" id="ORJ-PQ-me6">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="210.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="210"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nature" translatesAutoresizingMaskIntoConstraints="NO" id="Jvg-uD-pPo">
@@ -548,6 +572,7 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4e9-G4-HQh">
                                 <rect key="frame" x="111" y="278" width="142" height="36"/>
+                                <color key="backgroundColor" red="0.23018704354763031" green="0.77713233232498169" blue="0.3158949613571167" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="142" id="Ytx-hW-tB4"/>
                                 </constraints>
@@ -584,7 +609,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8sn-X2-f8o">
-                                <rect key="frame" x="100" y="289" width="174" height="36"/>
+                                <rect key="frame" x="76" y="294" width="222" height="78"/>
+                                <color key="backgroundColor" red="0.23018704354763031" green="0.77713233232498169" blue="0.3158949613571167" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="222" id="Axw-sU-vG0"/>
+                                    <constraint firstAttribute="height" constant="78" id="Gg9-b7-X87"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Multi Upload image">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -596,14 +626,14 @@
                         </subviews>
                         <color key="backgroundColor" red="0.1911550909280777" green="0.6378670334815979" blue="0.26147949695587158" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="8sn-X2-f8o" firstAttribute="centerX" secondItem="wH4-J3-AB7" secondAttribute="centerX" id="5wu-VA-ePZ"/>
-                            <constraint firstItem="8sn-X2-f8o" firstAttribute="top" secondItem="Y9P-o7-dkT" secondAttribute="bottom" constant="269" id="mZY-7W-gPK"/>
+                            <constraint firstItem="8sn-X2-f8o" firstAttribute="centerX" secondItem="wH4-J3-AB7" secondAttribute="centerX" id="Kty-qC-FuH"/>
+                            <constraint firstItem="8sn-X2-f8o" firstAttribute="centerY" secondItem="wH4-J3-AB7" secondAttribute="centerY" id="oMY-fF-eiQ"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cLB-EW-gqU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1886" y="33"/>
+            <point key="canvasLocation" x="1885.5999999999999" y="32.833583208395808"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="mmn-nQ-doy">
